@@ -1,3 +1,7 @@
+2010-07-10  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14896: ExtJS is not included when RTE is invoked by USER_INT frontend script
+
 2010-07-09  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #15061: Remove XCLASS from t3lib_utility_Http (Thanks to Georg Ringer)
